# jzukaku

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  sstest.py
.github/workflows/: publish.yml
example/: sample1.py
src/jzukaku/: __init__.py  cli.py  constants.py  jprcs.py  zukaku.py
